# meatyprompts

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  copier.yml  package-lock.json  package.json  pnpm-lock.yaml
services/api/: .env  .env.example  alembic.ini  pyproject.toml
services/api/alembic/: env.py  script.py.mako
services/api/alembic/versions/: 0001_create_users_table.py  0002_add_prompt_fk_constraints.py  20250214_migrate_to_clerk_auth.py  20250808_add_avatar_url_to_users.py  20250808_add_user_identities.py  20250901_tenancy_foundations.py  3f8c8a7b4f5c_create_prompts_and_prompt_versions_tables.py  91ad97bd25b5_change_models_tools_tags_to_array_in_.py  a94a2ac10fe2_wp_prm_ui_003_add_lookup_tables_and_.py  b1e8d8e2c3d0_mp_pmt_002_prompt_metadata.py  d1e3b4c5f6a7_mp_p1_api_003_add_created_at_index.py  e3b42cd1d5ab_mp_p1_coll_010_add_collections.py  fc8a67ff2575_mp_p1_db_002_baseline_schema.py
services/api/app/: main.py
services/api/app/api/: auth.py  collections.py  deps.py  imex.py  prompts.py  webhooks.py
services/api/app/api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/api/app/core/: config.py  database.py
services/api/app/db/: __init__.py  rls.py
services/api/app/models/: collection.py  imex.py  lookup.py  prompt.py  tag.py  tenancy.py  user.py
services/api/app/services/: auth_service.py  collection_service.py  export_service.py  import_service.py  lookup_service.py  metadata_service.py  prompt_service.py  search_service.py  tags_service.py  user_service.py
services/api/tests/: test_schema.py  test_tenancy.py
(+194 files in other folders)
